# veos

./: AndroidProducts.mk  README.md  aosp_veos_car.mk  rpi4_car_iti.mk  rpi5_veos.mk
Aidl_Service/: Android.bp  README.md  initVEOSService.rc
Aidl_Service/AIDL/: Android.bp
Aidl_Service/sepolicy/: file_contexts  service_contexts
CLI-Tool/: Android.bp  vehicle_tool.cpp
CommanLibs/: Android.bp
CommanLibs/jni/: CMakeLists.txt  vhal_jni.cpp
CommanLibs/jniLibs/: Android.bp
Someip-Client/: Android.bp  private.pem  public.pem  vsomeip-aosp.json  vsomeip-client.json
Someip-Client/fidl/: E01HelloWorld-SomeIP.fdepl  E01HelloWorld.fidl
Someip-Client/inc/: VhalPropertyMappings.hpp  vhalproperty.h
Someip-Client/src/: E01HelloWorldClient.cpp  ProtobufDataHandler.cpp  ProtobufDataHandler.hpp  RSAHelper.cpp  RSAHelper.hpp  VehicleProtoConverter.cpp  VehicleProtoConverter.hpp
VEOSDasboard-aosp/: Android.bp
VEOSDashboard-aosp/: Android.bp
VEOSTelemetry-aosp/: Android.bp  AndroidManifest.xml
lib/tea5767/: Android.bp
meta-logitech-app/conf/: layer.conf
meta-vsomeip-custom/: README
meta-vsomeip-custom/conf/: layer.conf
native/src/: VEOSService.cpp  VEOSService.hpp  main.cpp
protobuf/: avisio_ivi_data.proto
sepolicy/: inithelloservice.te
tea5767_service/: Android.bp  init.tea5767.rc
tea5767_service/aidl/: Android.bp
tea5767_service/native/: Tea5767Service.cpp  Tea5767Service.hpp  main.cpp
tea5767_service/sepolicy/: file_contexts  service_contexts  tea5767_service.te
veos-vhal-lib/: Android.bp
veos-vhal-lib/include/: vhal_shim.h
(+68 files in other folders)
